--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -1,6 +1,6 @@
 // Styling for header section
 
-.header{
+header{
     position: relative;
     display: table;
     width: 100%;
@@ -16,13 +16,13 @@
         font-size: 23px;
     }
     #selfwr-text{
-        height: 80px;
+        height: 100px;
         .item-1, 
         .item-2, 
         .item-3 {
             color: $primary-color;
             font-weight: 600;
-            font-size: 2.4rem;
+            font-size: 2.2rem;
             position: absolute;
             display: block;
             width: 100%;
@@ -94,11 +94,11 @@
     .btn-more{
         border-radius: 0;
         color: #fff !important;
-        padding: 12px 40px;    
+        padding: 10px 35px;    
         background:linear-gradient(to right, #FEB41E 0%, #f0bf6a 50%, #f5a70a 100%);
         background-size: 200% auto;
         text-transform: uppercase;
-        font-size: 1.1rem;
+        font-size: 1rem;
         font-weight: 600;
         letter-spacing: 1px;
         transition: background-position 0.5s;
@@ -108,45 +108,27 @@
     }
 }
 
-// /* Ripple Out */
-// @-webkit-keyframes hvr-ripple-out {
-//     100% {
-//     top: -12px;
-//     right: -12px;
-//     bottom: -12px;
-//     left: -12px;
-//     opacity: 0;
-//     }
-// }
-// @keyframes hvr-ripple-out {
-//     100% {
-//     top: -12px;
-//     right: -12px;
-//     bottom: -12px;
-//     left: -12px;
-//     opacity: 0;
-//     }
-// }
-// .hvr-ripple-out {
-//     display: inline-block;
-//     vertical-align: middle;
-//     -webkit-transform: perspective(1px) translateZ(0);
-//     transform: perspective(1px) translateZ(0);
-//     box-shadow: 0 0 1px transparent;
-//     position: relative;
-//     &:before{
-//         content: '';
-//         position: absolute;
-//         border: $primary-color solid 6px;
-//         top: 0;
-//         right: 0;
-//         bottom: 0;
-//         left: 0;
-//         -webkit-animation: 1.5s;
-//         animation: 1.5s;  
-//     }
-//     &:focus:before, &:active:before{
-//         -webkit-animation-name: hvr-ripple-out;
-//         animation-name: hvr-ripple-out;
-//     }
-// }
+@media (min-width: 768px){
+    .header{
+        #selfwr-text {
+            height: 80px;
+            .item-1, 
+            .item-2, 
+            .item-3 {
+                font-size: 2.4rem;
+            }
+        }
+        h2{
+            font-size: 1.6rem;
+        }
+        p{
+            font-size: 21px;
+        }
+    }
+    .btn-cont{
+        .btn-more{
+            padding: 12px 40px;    
+            font-size: 1.1rem;
+        }
+    }
+}
