--- a/public/style/_contact.scss
+++ b/public/style/_contact.scss
@@ -7,6 +7,8 @@
     .form-group {
         margin-bottom: 1.67rem;
         input{
+            border-width: 2px;
+            border-left: 2px solid $primary-color;
             padding: 1rem;
             color: $input-text-color;
         }
@@ -14,6 +16,8 @@
             height: 12.6rem;
         }
         textarea {
+            border-width: 2px;
+            border-left: 2px solid $primary-color;
             padding: 1rem;
         }
     }
@@ -22,7 +26,7 @@
         letter-spacing: 1px;
         border-radius: 0 !important;
         &:focus {
-            border-color: $primary-color;
+            border: 2px solid $primary-color;
             box-shadow: none;
         }
     }
