--- a/public/style/_navigation.scss
+++ b/public/style/_navigation.scss
@@ -1,16 +1,15 @@
 // Styling for navigation section
 
 #mainNav{
-    background-color: rgba(0, 0, 0, .3);
+    background-color: #222;
     padding: 0;
     .navbar-brand{
         text-transform: uppercase;
         font-weight: 500;
         letter-spacing: 2px;
-        font-size: 1.25rem;
+        font-size: 1.15rem;
         line-height: inherit;
         color: $primary-color;
-        display: inline-block;
         #title-img{
             width: 3rem;
             height: 3rem;
@@ -39,8 +38,8 @@
             opacity: 0.4;
         }
         #nav-icon {
-            height: 17px;
-            width: 28px;
+            height: 15px;
+            width: 25px;
             position: relative;
             -webkit-transform: rotate(0deg);
             -moz-transform: rotate(0deg);
@@ -100,55 +99,53 @@
             }
         }
     }
-    .navbar-nav{
-        .nav-item{
-            .nav-link{
-                display: block;
-                font-size: 13px;
-                padding: 2rem 1.1rem;
-                letter-spacing: 1px;
-                color: #fff;
-                text-transform: uppercase;
-                border-bottom: 2px solid transparent;
-                -webkit-transition: background .5s ease-in,border .5s ease-in;
-                transition: background .5s ease-in,border .5s ease-in;
-                &:hover, &.active{
-                    border-color: $primary-color;
-                    background-color: rgba(51, 50, 50, 0.6);
-                    color: $primary-color;
-                    -webkit-transition: all ease .5s;
-                    -moz-transition: all ease .5s;
-                    transition: all ease .5s;
-                }
+    .nav-link{
+        display: block;
+        font-size: 12px;
+        padding: 1rem 1rem;
+        letter-spacing: 1px;
+        color: #fff;
+        text-transform: uppercase;
+        &:hover, &.active{
+            color: $primary-color;
+        }
+    }
+}
+
+@media (min-width: 768px){
+    #mainNav{
+        .navbar-toggler{
+            #nav-icon {
+                height: 17px;
+                width: 28px;
             }
+        }
+        .nav-link{
+            font-size: 13px;
+            padding: 1.5em 0;
         }
     }
 }
 
 @media (min-width: 992px){
-    #mainNav {
-        transition: padding-top .3s,padding-bottom .3s;
-        border: none;
-        // background-color: transparent;
-        .navbar-brand {
-            font-size: 1.35rem;
-            transition: all .3s;
+    #mainNav{
+        .navbar-brand{
+            font-size: 1.25rem;
         }
         .nav-link{
             font-size: 13px;
-        }
-         &.navbar-shrink{
-            padding-top: 0;
-            padding-bottom: 0;
-            background-color: rgba(0, 0, 0, .8);
-            .navbar-brand {
-                font-size: 1.1em;
-                #title-img{
-                    width: 2rem;
-                    height: 2rem;
+            padding: 2rem 1.1rem;
+            border-bottom: 2px solid transparent;
+            -webkit-transition: background .5s ease-in,border .5s ease-in;
+            transition: background .5s ease-in,border .5s ease-in;
+            &:hover, &.active{
+                border-color: $primary-color;
+                background-color: rgba(51, 50, 50, 0.6);
+                color: $primary-color;
+                -webkit-transition: all ease .5s;
+                -moz-transition: all ease .5s;
+                transition: all ease .5s;
                 }
             }
-            
         }
     }
-}
