--- a/public/style/_products.scss
+++ b/public/style/_products.scss
@@ -6,7 +6,16 @@
     .section-heading{
         margin-bottom: 50px;
     }
+    h4{
+        font-size: 1.3rem;
+    }
     .sub-text{
         opacity: 0.8;
     }
+}
+
+@media (min-width: 768px){
+    // h4{
+    //     font-size: 1.3rem;
+    // }
 }
