Changes of media width

--- a/public/style/_clients.scss
+++ b/public/style/_clients.scss
@@ -49,7 +49,7 @@
     }
 }
 
-@media (max-width: 519px) {
+@media (max-width: 520px) {
     #clients{
         .centered{
             .client-item{
@@ -62,7 +62,7 @@
     }
 }
 
-@media (min-width: 520px), (max-width:691px) {
+@media (min-width: 521px) and (max-width:691px) {
     #clients{
         .centered{
             .client-item{
